--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3047,37 +3047,7 @@
 /*-----------------------------------------------------------------------------------------------*/
 
 .toolTip { /* This is the hook that the jQuery script will use */
-	padding-right: 20px; /* This is need to make sure that the help icon is always visible */
-	background: transparent url(http://3nhanced.com/examples/tooltip/images/help.gif) no-repeat right;
 	color: #3366FF;
 	cursor: help; 
-	position: relative; /* This contains the .toolTipWrapper div that is absolutely positioned  */
+	position: right; /* This contains the .toolTipWrapper div that is absolutely positioned  */
 }
-
-	.toolTipWrapper { /* The wrapper holds its insides together */
-		width: 175px;
-		position: absolute; /* Absolute will make the tooltip float above other content in the page */
-		top: 20px;
-		display: none; /* It has to be displayed none so that the jQuery fadein and fadeout functions will work */
-		color: #FFF;
-		font-weight: bold;
-		font-size: 9pt; /* A font size is needed to maintain consistancy */
-	}
-	
-		.toolTipTop { /* Top section of the tooltip */
-			width: 175px;
-			height: 30px;
-			background: transparent url(http://3nhanced.com/examples/tooltip/images/bubbleTop.gif) no-repeat;
-		}
-
-		.toolTipMid { /* Middle section of the tooltip */
-			padding: 8px 15px;
-			background: #A1D40A url(http://3nhanced.com/examples/tooltip/images/bubbleMid.gif) repeat-x top;
-		}
-		
-		.toolTipBtm { /* Bottom Section of the tooltip */
-			height: 13px;
-			background: transparent url(http://3nhanced.com/examples/tooltip/images/bubbleBtm.gif) no-repeat;
-		}
-		
-	
